SET(SERVICE_NAME ${PROJECT_NAME}_service)
SET(SERVICE_NAME_EXE ${SERVICE_NAME}_s)

SET(GLOBAL_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/sniffer_db.h
  ${CMAKE_CURRENT_SOURCE_DIR}/process_wrapper.h
)
SET(GLOBAL_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/sniffer_db.cpp
  ${CMAKE_CURRENT_SOURCE_DIR}/process_wrapper.cpp
)

SET(DATABASE_HEADERS
  ${CMAKE_CURRENT_SOURCE_DIR}/database/connection.h
)

SET(DATABASE_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/database/connection.cpp
)

IF(APPLE)
  SET(PLATFORM_HEADER)
  SET(PLATFORM_SOURCES)
  SET(PLATFORM_LIBRARIES)
ELSEIF(UNIX)
  SET(PLATFORM_HEADER)
  SET(PLATFORM_SOURCES)
  SET(PLATFORM_LIBRARIES rt m z pthread)
ENDIF(APPLE)

FIND_PACKAGE(Cassandra REQUIRED)
FIND_PACKAGE(Common REQUIRED)

SET(PRIVATE_INCLUDE_DIRECTORIES_SERVICE ${PRIVATE_INCLUDE_DIRECTORIES_SERVICE} ${CMAKE_CURRENT_SOURCE_DIR} ${COMMON_INCLUDE_DIRS} ${CASSANDRA_INCLUDE_DIRS})

SET(RUN_DIR_PATH "/var/run/${SERVICE_NAME}")
SET(PIDFILE_PATH "${RUN_DIR_PATH}/${SERVICE_NAME}.pid")
SET(USER_NAME ${PROJECT_NAME_LOWERCASE})
SET(USER_GROUP ${PROJECT_NAME_LOWERCASE})

SET(PRIVATE_COMPILE_DEFINITIONS_SERVICE
  ${PRIVATE_COMPILE_DEFINITIONS_SERVICE}
  -DUSER_NAME="${USER_NAME}"
  -DUSER_GROUP="${USER_GROUP}"
  -DCONFIG_SLAVE_FILE_PATH="/etc/${SERVICE_NAME}.conf"
  -DLICENSE_KEY="${LICENSE_KEY}"
  -DPIDFILE_PATH="${PIDFILE_PATH}"
  -DCORE_LIBRARY="${CORE_LIBRARY}"
  -DPIDFILE_PATH="${PIDFILE_PATH}"
  -DSERVICE_NAME="${SERVICE_NAME}"
  -DRELATIVE_SOURCE_DIR="${RELATIVE_SOURCE_DIR}"
)

SET(SERVICE_LIBRARIES ${SERVICE_LIBRARIES} pcap ${CASSANDRA_LIBRARIES} ${COMMON_LIBRARIES} ${PLATFORM_LIBRARIES})

ADD_EXECUTABLE(${SERVICE_NAME_EXE}
  ${GLOBAL_HEADERS} ${GLOBAL_SOURCES}
  ${DATABASE_HEADERS} ${DATABASE_SOURCES}
  main.cpp
)
TARGET_INCLUDE_DIRECTORIES(${SERVICE_NAME_EXE} PRIVATE ${PRIVATE_INCLUDE_DIRECTORIES_SERVICE})
TARGET_COMPILE_DEFINITIONS(${SERVICE_NAME_EXE} PRIVATE ${PRIVATE_COMPILE_DEFINITIONS_SERVICE})
TARGET_LINK_LIBRARIES(${SERVICE_NAME_EXE} ${SERVICE_LIBRARIES})

IF(DEVELOPER_ENABLE_TESTS)
  FIND_PACKAGE(GTest REQUIRED)
  ADD_DEFINITIONS(-DTEST_FOLDER_PATH="${CMAKE_SOURCE_DIR}/tests/")
  SET(UNIT_TESTS_PROJECT_NAME ${PROJECT_NAME}_unit_tests)
  SET(UNIT_TESTS_SOURCES ${CMAKE_SOURCE_DIR}/tests/sniffer_unit_tests.cpp)
  ADD_EXECUTABLE(${UNIT_TESTS_PROJECT_NAME} ${UNIT_TESTS_SOURCES})
  TARGET_LINK_LIBRARIES(${UNIT_TESTS_PROJECT_NAME} ${GTEST_BOTH_LIBRARIES} ${PLATFORM_LIBRARIES})

  SET(INTEGRATION_TESTS_PROJECT_NAME ${PROJECT_NAME}_integration_tests)
  SET(INTEGRATION_TESTS_SOURCES ${CMAKE_SOURCE_DIR}/tests/read_pcap_file.c)
  ADD_EXECUTABLE(${INTEGRATION_TESTS_PROJECT_NAME} ${INTEGRATION_TESTS_SOURCES})
  TARGET_LINK_LIBRARIES(${INTEGRATION_TESTS_PROJECT_NAME} pcap)
ENDIF(DEVELOPER_ENABLE_TESTS)
